# Jack-The-Janitor

./: .gitignore  AUTHORS  CMakeLists.txt  INSTALL  Makefile  Makefile.common  Vagrantfile  build.sh  cleanup.sh  metadata.ini  run.sh
linux/: JackTheJanitor  Linux.cmake  build.sh  cleanup.sh  create_installer.sh  run.sh
src/: CMakeLists.txt  game.cpp  main.cpp
src/engine/include/: gameobject.h  optionsscreen.h  rawimage.h  scorescreen.h  sdlutil.h
src/engine/src/: optionsscreen.cpp  rawimage.cpp  scorescreen.cpp  sdlutil.cpp  timer.cpp
src/engine/src/linux/: resources_dir.cpp
src/game/include/: game.h
src/game/src/: game.cpp
vms/: Vagrantfile.ubuntu_x64
windows/: Windows.cmake  build.sh  cleanup.sh  create_installer.sh
